light javascript to deal with z-index issues

--- a/css/main.css
+++ b/css/main.css
@@ -12,24 +12,25 @@ html, body {
   display: block;
   position: relative;
 }
-section {
+a {
+  color: #454545;
+  text-decoration: none;
   float: left;
   z-index: 0;
   margin: 0;
-  cursor: pointer;
   transition: all 0.5s ease-in-out;
   display: inline-block;
   height: 100%;
   width: 50%;
   position: relative;
 }
-section.left {
+a.left {
   background: #dfe2e2;
 }
-section.right {
+a.right {
   background: #edb966;
 }
-section div {
+a div {
   font-family: 'Vollkorn', serif;
   text-align: center;
   font-size: 5em;
@@ -37,8 +38,8 @@ section div {
   top: 33%;
   left: 33%;
 }
-section:hover {
-  z-index: 1;
+a:hover {
+  color: #212121;
   -webkit-transform: scale(1.1);
   box-shadow: 0 2px 10px #454545;
 }
